fixed logo not showing

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a class="navbar-brand" href="#"
             ><img
                 class=" aside-logo logo mt-xl"
-                src="{{ asset('/images/GetViral.svg') }}"
+                src="assets/images/logo.svg"
                 alt=""
             /></a>
     
@@ -204,7 +204,7 @@
                 <a class="navbar-brand" href="#"
                 ><img
                     class="logo"
-                    src="{{ asset('/images/GetViral.svg') }}"
+                    src="assets/images/logo.svg"
                     alt=""
                 /></a>
                 <button
