added password toggler

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="description" content="advertising, web app, trending" />
         <meta name="keywords" content="advertising, web app, trending" />
         <!-- Website title-->
-        <title>Withdrawal</title>
+        <title>GetViral | Publisher Profile</title>
         <link rel="shortcut icon" href="" type="image/x-icon" />
         <link rel="icon" href="" />
         <link rel="apple-touch-icon-precomposed" href="" />
@@ -519,7 +519,8 @@
                                 <label for="phone" class=" pub-label">Phone Number</label>
                                 <input type="number" class="form-control pub-input" id="phone" placeholder="08034567789">
                             </div>
-                            <div class="form-each">
+                            <div class="form-each pword">
+                                <img src="assets/images/Password.svg" alt="" class="pword-show">
                                 <label for="pword" class=" pub-label">First Name</label>
                                 <input type="password" class="form-control pub-input" id="pword"  placeholder="**********">
                             </div>
