--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
                                 <h1 class="pub-name purple-color">Irish Kelvin</h1>
                                 <p class="small-text">Social Media Influencer&nbsp;&nbsp;&nbsp;<span>VVIP</span>&nbsp;&nbsp;&nbsp;<span></span>
                                   <span class="stars-holder">
-                                      <img src="assets/images/Star.svg" alt="" class="stars">
-                                      <img src="assets/images/Star.svg" alt="" class="stars">
-                                      <img src="assets/images/Star.svg" alt="" class="stars">
-                                      <img src="assets/images/Star.svg" alt="" class="stars">
-                                      <img src="assets/images/Star.svg" alt="" class="stars">
+                                      <img src="assets/images/star-pub.svg" alt="" class="stars">
+                                      <img src="assets/images/star-pub.svg" alt="" class="stars">
+                                      <img src="assets/images/star-pub.svg" alt="" class="stars">
+                                      <img src="assets/images/star-pub.svg" alt="" class="stars">
+                                      <img src="assets/images/star-pub.svg" alt="" class="stars">
                                   </span></p>
                                   <p class="small-text"><img src="assets/images/locator.svg" alt="">&nbsp;&nbsp;<span class="address">234 Lakeside, Melbourne, Russia</span></p>
                                   <p class="small-text"><span class="purple-text">Date Added:</span>&nbsp;&nbsp;&nbsp;<span class="added-date grey-text">12 Jul 2020</span></p>
@@ -492,10 +492,10 @@
                             <div><h1 class="sm-name purple-color">Social Media Base</h1></div>
                             <div class="sm-icons-holder">
                                 <div class="active-sm sm-icon"><img src="assets/images/fb-orange.svg" alt="">&nbsp;&nbsp;30,000+</div>
-                                <div class="sm-icon"><img src="assets/images/twitter.svg" alt="">&nbsp;&nbsp;30,000</div>
+                                <div class="sm-icon"><img src="assets/images/twitter-pub.svg" alt="">&nbsp;&nbsp;30,000</div>
                                 <div class="sm-icon"><img src="assets/images/pinterest.svg" alt="">&nbsp;&nbsp;30,000</div>
-                                <div class="sm-icon"><img src="assets/images/youtube.svg" alt="">&nbsp;&nbsp;30,000</div>
-                                <div class="last-sm"><img src="assets/images/ig.svg" alt="">&nbsp;&nbsp;30,000</div>
+                                <div class="sm-icon"><img src="assets/images/youtube-pub.svg" alt="">&nbsp;&nbsp;30,000</div>
+                                <div class="last-sm"><img src="assets/images/ig-pub.svg" alt="">&nbsp;&nbsp;30,000</div>
 
                             </div>
 
@@ -520,8 +520,8 @@
                                 <input type="number" class="form-control pub-input" id="phone" placeholder="08034567789">
                             </div>
                             <div class="form-each pword">
-                                <img src="assets/images/Password.svg" alt="" class="pword-show">
-                                <label for="pword" class=" pub-label">First Name</label>
+                                 <button class="pword-toggle"><img src="assets/images/password.svg" alt="" class="pword-show"></button>
+                                <label for="pword" class=" pub-label">Password</label>
                                 <input type="password" class="form-control pub-input" id="pword"  placeholder="**********">
                             </div>
                       </form>
