--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 aria-expanded="false"
                 aria-label="Toggle navigation"
                 >
-                <span class="navbar-toggler-icon"></span>
+                <img src="assets/images/hamburger menu.svg" alt="">
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="navbarNav">
